# Tabilog

./: .byebug_history  .gitignore  .rubocop.yml  .rubocop_todo.yml  Dockerfile  Gemfile  README.md  docker-compose.yml  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: github-action.yml  linter.yml  main.yml  rspec.yml  rspec_security.yml
app/api/: gemini_handler  gemini_handler.rb  generate_response.py  generative_ai_handler.rb  system_prompt.txt  tuned_model.py
app/apis/: gemini_travel_plan_generator.rb
app/assets/builds/: chat_room.js  chat_room.js.map
app/assets/config/: manifest.js
app/assets/stylesheets/: application.css  chat_room.css  welcome_styles.css
app/controllers/: chat_room_controller.rb  welcome_controller.rb
app/helpers/: application_helper.rb  welcome_helper.rb
app/javascript/: application.js  chat_room.js
app/javascript/controllers/: leaflet_map.js
app/mailers/: application_mailer.rb
app/models/: application_record.rb
app/services/: gemini_travel_plan_generator.rb  system_prompt.json  yolp_map_handler.rb
app/views/chat_room/: generate_plan_result.html.erb  index.html.erb
config/: application.rb  credentials.yml.enc  database.yml  routes.rb
db/: schema.rb
spec/: rails_helper.rb  spec_helper.rb
spec/features/: welcome_spec.rb
spec/requests/: chat_room_request_spec.rb  generative_ai_handler_spec.rb
spec/services/: gemini_travel_plan_generator_spec.rb
test/: application_system_test_case.rb  test_helper.rb
test/controllers/: welcome_controller_test.rb
(+4 files in other folders)
