[tool.poetry]
name = "tabilog"
version = "0.1.0"
description = ""
authors = ["Hayato Shimizu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
google = "^3.0.0"
google-generativeai = "^0.4.1"

[tool.poetry.group.dev.dependencies]
google-generativeai = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
